Fix shading on dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,6 +69,10 @@ summary h2 {
   box-shadow: 0 20px 5px rgb(255 255 255 / 0.5);
 }
 
+.dark\:top-toolbar:is(.dark *) {
+  box-shadow: 0 20px 5px rgb(28 27 34 / 0.5);
+}
+
 @media print {
   .no-print {
     display: none;
